# quizMe

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  README.md  docker-compose-local.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  run_embedder.py  run_indexgen.py  run_intelligence.py  run_parser.py  run_planner.py  run_rfp.py  run_tool_loop.py  sample.env.txt
azuresetup/: containers.sh
azurewrapper/: cosmos_sec_facts.py  doc_handler_base.py  doc_summary_handler.py  openai_client.py  parsed_doc_handler.py  prompt_types.py  raw_doc_handler.py  raw_doc_queue.py
browser_extension/: README.md  jest.config.js  package.json  tsconfig.json  webpack.config.js
crawlers/: run_indexgen.py  run_intelligence.py  run_parser.py  run_rfp.py  run_tool_loop.py  sample.env.txt
docparsers/: README.md  default_parser.py  docparsertypes.py  driver.py  extract_doc_maker.py  parser_base.py  structured_data_upload.py  toppan_merrill_bridge.py  workiva.py
indexgen/: gate.py  localtypes.py  read_rss.py  zip_handler.py
intelligence/: answer_parsers.py  doc_understanding_driver.py  embedder.py  filter.py  large_doc_parser.py  openai_client.py  prompt_types.py  prompt_utils.py  prompts.txt  summary_embedding_driver.py
nginx/: nginx.conf
research/: Untitled.ipynb
rfp/: driver.py  prompts.py
samples/: dirty.html  jwn-20230729.htm  jwn-20230729_clean.htm  karx_10k.htm  karx_10k_clean.htm  r9523010q.htm  r9523010q_clean.htm  sample_plan.json  svbl-20230731.htm  svbl-20230731_clean.htm  tm2325071d1_8k.htm  (+1 more)
test/: README.md  (+1 more)
(+387 files in other folders)
