[tool.poetry]
name = "financeexplorer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
feedparser = "^6.0.11"
requests = "^2.31.0"
bs4 = "^0.0.2"
lxml = "^5.1.0"
json-repair = "^0.8.0"
pypdf = "^4.0.1"
python-dotenv = "^1.0.1"
azure-storage-blob = ">=12.9.0"
azure-storage-queue = "^12.9.0"
azure-cosmos = "^4.5.1"
azure-keyvault = "^4.2.0"
azure-identity = "^1.15.0"
openai = ">=1.1.1"
tiktoken = "^0.5.2"
sentence-transformers = "^2.3.1"
wikipedia = "^1.4.0"
django = ">=5.0"
rq = ">=1.15"
django-rq = ">=2.9"
django-cors-headers = ">=4.3.1"
sentry-sdk = "^1.40.1"
django-ninja = ">=1.0.1"
psycopg2-binary = "^2.9.9"
gunicorn = "^21.2.0"
whitenoise = "^6.6.0"
markdown = "^3.5.2"
pdfminer-six = "^20231228"


[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"
ruff = "^0.2.1"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"